Update all the folders with files from the the Single Repositories I've used to connect the services, bot, etc. on Azure

--- a/starter/ContosoDentistryChatBot/.env
+++ b/starter/ContosoDentistryChatBot/.env
@@ -1,2 +1,13 @@
 MicrosoftAppId=5371b986-ac48-4bfc-a8c2-1d07b2574d6c
 MicrosoftAppPassword=8VcrIfI=FW1#?0QP*{{@y)^Z7GG.3
+
+QnAAuthKey=6deeebf7-cdcb-4105-bbcb-b2923c6c1afa
+QnAEndpointHostName=https://dental-office-virtual-assistant-qnakb.azurewebsites.net/qnamaker
+QnAKnowledgebaseId=c1dc9fa0-0618-48e9-bba3-f7f3129cef76
+
+LuisAppId=312ba393-7dd3-463d-bc4f-b4c4f713a091
+LuisAPIKey=270ce7b5a5cd4c8fb43cadcea3a6b9f0
+LuisAPIHostName=https://westus.api.cognitive.microsoft.com/
+
+
+SchedulerEndpoint=https://dental-office-virtual-assistant-webapp.azurewebsites.net
